--- a/src/TicketApi/appsettings.Development.json
+++ b/src/TicketApi/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:34401"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
